# c-studies

./: .gitignore
Alura/cpp-intro/: guess_game.cpp  words.txt
Alura/cpp-intro/gallows/: gallows_game  gallows_game.cpp
Alura/cpp-intro/gallows/functions/: title.hpp
Alura/cpp-intro/gallows/functions/char_exists/: char_exists.cpp  char_exists.hpp
Alura/cpp-intro/gallows/functions/give_guess/: give_guess.cpp  give_guess.hpp
Alura/cpp-intro/gallows/functions/is_hanged/: is_hanged.cpp  is_hanged.hpp
Alura/cpp-intro/gallows/functions/is_word_guessed/: is_word_guessed.cpp  is_word_guessed.hpp
Alura/cpp-intro/gallows/functions/print_word/: print_word.cpp  print_word.hpp
Alura/cpp-intro/gallows/functions/print_wrong_tries/: print_wrong_tries.cpp  print_wrong_tries.hpp
Alura/cpp-intro/gallows/functions/read_file/: read_file.cpp
Alura/cpp-intro/gallows/functions/select_difficulty/: select_difficulty.cpp  select_difficulty.hpp
Alura/cpp-intro/gallows/functions/select_word/: select_word 1.cpp  select_word.hpp
Alura/cpp-oo/: CMakeLists.txt  main.cpp
Alura/cpp-oo/Account/: Account.cpp  Account.hpp  Authenticable.cpp  Authenticable.hpp  CurrencyAccount.cpp  CurrencyAccount.hpp  Employee.cpp  Employee.hpp  Id.cpp  Id.hpp  Manager.cpp  Manager.hpp  Owner.cpp  Owner.hpp  Person.hpp  SavingsAccount.cpp  SavingsAccount.hpp  Teller.cpp  Teller.hpp  WeekDay.hpp
